--- a/BicycleParkingStationForecast/model.yaml
+++ b/BicycleParkingStationForecast/model.yaml
@@ -1,9 +1,6 @@
 BicycleParkingStationForecast:
-
   description: Bicycle Parking Station Schema meeting Passenger Transport Hubs AP Schema specification
-
   properties:
-
     InfrastructureElement.geometry:
       description: The geometry corresponding to the infrastructure element
       properties:
@@ -12,24 +9,23 @@ BicycleParkingStationForecast:
           properties: {}
           type: string
           x-ngsi:
-            model: http://www.opengis.net/ont/geosparql#asWKT
+            model: "http://www.opengis.net/ont/geosparql#asWKT"
             type: Property
         type:
-          description: ''
+          description: ""
           enum:
             - Geometry
           type: string
           x-ngsi:
-            model: ' http://www.w3.org/ns/locn#Geometry'
+            model: " http://www.w3.org/ns/locn#Geometry"
             type: Property
       required:
         - type
         - Geometry.asWkt
       type: object
       x-ngsi:
-        model: http://www.w3.org/ns/locn#geometry
+        model: "http://www.w3.org/ns/locn#geometry"
         type: Property
-
     ParkingFacility.capacity:
       description: 'Capacity of a civic structure. '
       properties:
@@ -37,7 +33,7 @@ BicycleParkingStationForecast:
           description: Indicates the capacity of a resource
           type: number
           x-ngsi:
-            model: ' http://schema.mobivoc.org/#totalCapacity'
+            model: " http://schema.mobivoc.org/#totalCapacity"
             type: Property
         type:
           enum:
@@ -48,114 +44,94 @@ BicycleParkingStationForecast:
         - Capacity.total
       type: object
       x-ngsi:
-        model: http://schema.mobivoc.org/#capacity
+        model: "http://schema.mobivoc.org/#capacity"
         type: Property
-
     address:
-
       description: The mailing address
-
       properties:
-
         addressCountry:
-          description: The country. For example, Spain
+          description: 'The country. For example, Spain'
           type: string
           x-ngsi:
             model: https://schema.org/addressCountry
             type: Property
-
         addressLocality:
-          description: The locality in which the street address is, and which is in the region
+          description: 'The locality in which the street address is, and which is in the region'
           type: string
           x-ngsi:
             model: https://schema.org/addressLocality
             type: Property
-
         addressRegion:
-          description: The region in which the locality is, and which is in the country
+          description: 'The region in which the locality is, and which is in the country'
           type: string
           x-ngsi:
             model: https://schema.org/addressRegion
             type: Property
-
         district:
-          description: A district is a type of administrative division that, in some countries, is managed by the local government
+          description: 'A district is a type of administrative division that, in some countries, is managed by the local government'
           type: string
           x-ngsi:
             type: Property
-
         postOfficeBoxNumber:
-          description: The post office box number for PO box addresses. For example, 03578
+          description: 'The post office box number for PO box addresses. For example, 03578'
           type: string
           x-ngsi:
             model: https://schema.org/postOfficeBoxNumber
             type: Property
-
         postalCode:
-          description: The postal code. For example, 24004
+          description: 'The postal code. For example, 24004'
           type: string
           x-ngsi:
             model: https://schema.org/https://schema.org/postalCode
             type: Property
-
         streetAddress:
           description: The street address
           type: string
           x-ngsi:
             model: https://schema.org/streetAddress
             type: Property
-
         streetNr:
           description: Number identifying a specific property on a public street
           type: string
           x-ngsi:
             type: Property
-
       type: object
-
       x-ngsi:
         model: https://schema.org/address
         type: Property
-
     alternateName:
       description: An alternative name for this item
       type: string
       x-ngsi:
         type: Property
-
     areaServed:
       description: The geographic area where a service or offered item is provided
       type: string
       x-ngsi:
         model: https://schema.org/Text
         type: Property
-
     dataProvider:
       description: A sequence of characters identifying the provider of the harmonised data entity
       type: string
       x-ngsi:
         type: Property
-
     dateCreated:
       description: Entity creation timestamp. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
-
     dateModified:
       description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
-
     description:
       description: A description of this item
       type: string
       x-ngsi:
         type: Property
-
     id:
       anyOf:
         - description: Identifier format of any NGSI entity
@@ -173,13 +149,9 @@ BicycleParkingStationForecast:
       description: Unique identifier of the entity
       x-ngsi:
         type: Property
-
     location:
-
-      description: Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon
-
+      description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
       oneOf:
-
         - description: Geojson reference to the item. Point
           properties:
             bbox:
@@ -203,7 +175,6 @@ BicycleParkingStationForecast:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. LineString
           properties:
             bbox:
@@ -230,7 +201,6 @@ BicycleParkingStationForecast:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. Polygon
           properties:
             bbox:
@@ -259,7 +229,6 @@ BicycleParkingStationForecast:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. MultiPoint
           properties:
             bbox:
@@ -285,7 +254,6 @@ BicycleParkingStationForecast:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. MultiLineString
           properties:
             bbox:
@@ -314,7 +282,6 @@ BicycleParkingStationForecast:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. MultiLineString
           properties:
             bbox:
@@ -345,16 +312,13 @@ BicycleParkingStationForecast:
           type: object
           x-ngsi:
             type: GeoProperty
-
       x-ngsi:
         type: GeoProperty
-
     name:
       description: The name of this item
       type: string
       x-ngsi:
         type: Property
-
     owner:
       description: A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)
       items:
@@ -377,7 +341,6 @@ BicycleParkingStationForecast:
       type: array
       x-ngsi:
         type: Property
-
     seeAlso:
       description: list of uri pointing to additional resources about the item
       oneOf:
@@ -390,13 +353,11 @@ BicycleParkingStationForecast:
           type: string
       x-ngsi:
         type: Property
-
     source:
-      description: A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object
+      description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object'
       type: string
       x-ngsi:
         type: Property
-
     type:
       description: NGSI Entity type. It has to be BicycleParkingStation
       enum:
@@ -404,7 +365,6 @@ BicycleParkingStationForecast:
       type: string
       x-ngsi:
         type: Property
-
     validFrom:
       description: Validity period start date and time
       format: date-time
@@ -412,7 +372,6 @@ BicycleParkingStationForecast:
       x-ngsi:
         model: https://schema.org/DateTime
         type: Property
-
     validTo:
       description: Validity period end date and time
       format: date-time
@@ -420,28 +379,19 @@ BicycleParkingStationForecast:
       x-ngsi:
         model: https://schema.org/DateTime
         type: Property
-
     validity:
       description: 'Includes the validity period for this forecast as a ISO8601 time interval. It can be also used two separate attributes: `validFrom`, `validTo`'
       type: string
       x-ngsi:
         model: https://schema.org/Text
         type: Property
-
   required:
     - id
     - type
-
   type: object
-
-  x-derived-from: ''
-
-  x-disclaimer: Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program
-
+  x-derived-from: ""
+  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
   x-license-url: https://github.com/smart-data-models/dataModel.OSLO/blob/master/BicycleParkingStationForecast/LICENSE.md
-
   x-model-schema: https://github.com/smart-data-models/dataModel.OSLO/raw/master/BicycleParkingStationForecast/schema.json
-
   x-model-tags: GreenMov
-
   x-version: 1.0.0
